# Rusmpp

./: Readme.md
.github/workflows/: build-and-test.yml  rusmppyc.yaml
fuzz/fuzz_targets/: decode_owned.rs
rusmpp/: Cargo.toml
rusmpp-core/: Cargo.toml
rusmpp-core/src/: decode.rs  encode.rs
rusmpp-core/src/command/: owned.rs
rusmpp-core/src/decode/: bytes.rs  owned.rs
rusmpp-core/src/tests/: mod.rs  owned.rs
rusmpp-core/src/tokio_codec/: mod.rs  tests.rs
rusmpp-core/src/types/: u16.rs  u32.rs  u8.rs
rusmpp-core/src/udhs/: mod.rs
rusmpp-core/src/values/: addr_subunit.rs  bearer_type.rs  esm_class.rs  interface_version.rs  npi.rs  registered_delivery.rs  sub_address.rs  ton.rs
rusmpp-extra/: Cargo.toml  Readme.md
rusmpp-extra/examples/: submit_sm_encode.rs  submit_sm_multipart.rs  submit_sm_multipart_fallback.rs
rusmpp-extra/src/: fallback.rs  lib.rs
rusmpp-macros/src/: lib.rs  parts.rs  repr.rs  structs.rs
rusmpp/examples/: submit_sm.rs
rusmpp/src/: extra.rs  lib.rs  pdus.rs  udhs.rs
rusmppc/: Cargo.toml
rusmppc/examples/: insights.rs  rusmppc_submit_sm.rs  rusmppc_submit_sm_multipart.rs
rusmppc/src/: builder.rs  client.rs  connection.rs  event.rs  lib.rs  mock.rs  request.rs  tests.rs
rusmppy/rusmppyc/: Cargo.toml  Readme.md  pyproject.toml
rusmppy/rusmppyc/python/examples/: connect.py  encode.py  multipart.py
rusmppy/rusmppyc/python/rusmppyc/: client.pyi  exceptions.py  exceptions.pyi  rusmppyc.pyi
rusmppy/rusmppyc/src/: client.rs  encoder.rs  exception.rs  generated_impl.rs  io.rs  lib.rs
rusmppz/src/: pdus.rs
(+74 files in other folders)
