[package]
name = "rusmppyc"
version = "0.3.0-alpha.4"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusmppyc"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2" }
pyo3-async-runtimes = { version = "0.27.0", features = [
    "attributes",
    "tokio-runtime",
] }
pyo3-stub-gen = "0.17.2"
pyo3-stub-gen-derive = "0.17.2"
pyo3-log = "0.13.2"
futures = "0.3.3"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
bytes = "1"
humantime = "2.2.0"

tracing = { version = "0.1.41", features = ["log-always"] }
rusmpp = { path = "../../rusmpp", version = "0.4.0", default-features = false }
rusmppc = { path = "../../rusmppc", version = "0.4.0", default-features = false }

[build-dependencies]
pyo3-build-config = { version = "0.27.1", features = ["resolve-config"] }

[features]
default = ["rustls"]
rustls = [
    "rusmppc/rustls",
    "rusmppc/rustls-tls-native-roots",
    "rusmppc/rustls-tls-webpki-roots",
    "rusmppc/rustls-ring",
]

[[bin]]
name = "stub-gen"
